# exattr-maya

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
docs/: index.html
include/: ExtraAttrManagerCmd.h  ExtraAttrModel.h  ExtraAttrScanner.h  ExtraAttrUI.h  MayaUtils.h
scripts/: addExtraAttrMenu.mel  createExtraAttrShelfButton.mel
src/: ExtraAttrManagerCmd.cpp  ExtraAttrManagerPlugin.cpp  ExtraAttrModel.cpp  ExtraAttrScanner.cpp  ExtraAttrUI.cpp  MayaUtils.cpp
